# waypoint

./: LICENSE  README.md
docs/: CONTRIBUTING.md  README.md
examples/quick_start1/: CMakeLists.txt  CMakePresets.json  test01.cpp  test02.cpp  the_answer.cpp  the_answer.hpp
examples/quick_start_build_and_install/: CMakeLists.txt  test01.cpp  test02.cpp  the_answer.cpp  the_answer.hpp
infrastructure/: .clang-format-20  .clang-tidy-20  CMakeLists.txt  CMakePresets.json  tools.cmake
infrastructure/docker/: build.dockerfile
infrastructure/docker/context/: set_up_image_root.bash  set_up_image_user.bash
scripts/: build.py  enter_docker.bash  git_pre_commit_hook.py
src/assert/: assert.cpp
src/coverage/linux/: coverage.cpp
src/process/linux/: process.cpp
src/waypoint/: autorun_linux.cpp  core_actions.cpp  entry_point.cpp  function.cpp  get_impl.cpp  impls.cpp  registrar.cpp  smart_ptrs.cpp  string.cpp  test_types.cpp  unique_ptr.cpp  vector.cpp  waypoint.cpp
src/waypoint/internal/: get_impl.hpp  ids.hpp  impls.hpp  types.hpp
test/000_include_only/: main.cpp
test/001_init_only/: main.cpp
test/002_empty_autorun_block_with_init/: main.cpp
test/003_two_empty_autorun_blocks_with_init/: main.cpp
test/003_two_empty_autoruns_with_init/: main.cpp
test/004_empty_autorun_block_no_init/: main.cpp
test/005_two_empty_autoruns_no_init/: main.cpp
test/006_one_empty_group/: main.cpp
test/007_two_empty_groups_diff_names/: main.cpp
test/007_two_empty_groups_different_names/: main.cpp
test/008_two_empty_groups_same_name/: main.cpp
test/009_trivial_test/: main.cpp
test/010_two_tests_same_group_diff_name/: main.cpp
test/010_two_trivial_tests_same_group_different_names/: main.cpp
test/011_two_tests_diff_group_diff_name/: main.cpp
test/011_two_trivial_tests_different_groups_different_names/: main.cpp
test/012_two_tests_diff_group_same_name/: main.cpp
test/012_two_trivial_tests_different_groups_same_name/: main.cpp
test/013_two_tests_same_group_same_name/: main.cpp
test/013_two_trivial_tests_same_group_same_name/: main.cpp
test/014_passing_test/: main.cpp
test/015_failing_test/: main.cpp
test/016_passing_test_with_auto/: main.cpp
test/017_failing_test_with_auto/: main.cpp
test/018_failing_test_with_auto/: main.cpp
test/019_failing_test_with_auto/: main.cpp
test/020_failing_test_with_auto/: main.cpp
test/021_failing_test_with_auto/: main.cpp
test/022_failing_test_with_auto/: main.cpp
test/023_failing_test_with_auto/: main.cpp
test/024_failing_test_with_auto/: main.cpp
test/025_failing_test_with_auto/: main.cpp
test/026_multiple_tests/: main.cpp
test/027_impl_unique_ptr/: main.cpp
test/027_internal_smart_ptrs/: main.cpp
test/027_unique_ptr/: main.cpp
test/028_assertion_messages/: main.cpp
test/029_results/: main.cpp
test/030_capturing_lambda_as_test_body/: main.cpp
test/031_mutable_lambda_as_test_body/: main.cpp
test/032_setup/: main.cpp
test/033_teardown/: main.cpp
test/034_incomplete_tests/: main.cpp
test/034_internal_function/: main.cpp
test/035_assert_return/: main.cpp
test/035_assume/: main.cpp
test/036_disable/: main.cpp
test/037_status/: main.cpp
test/038_process/: main.cpp
test/039_process/: main.cpp
test/040_process/: main.cpp
test/041_init_only/: main.cpp
test/042_empty_autorun_block_with_init/: main.cpp
test/043_two_empty_autoruns_with_init/: main.cpp
test/044_one_empty_group/: main.cpp
test/045_two_empty_groups_diff_names/: main.cpp
test/046_two_empty_groups_same_name/: main.cpp
test/047_trivial_test/: main.cpp
test/048_two_tests_same_group_diff_name/: main.cpp
test/049_two_tests_diff_group_diff_name/: main.cpp
test/050_two_tests_diff_group_same_name/: main.cpp
test/051_two_tests_same_group_same_name/: main.cpp
test/052_passing_test/: main.cpp
test/053_failing_test/: main.cpp
test/054_passing_test_with_auto/: main.cpp
test/055_failing_test_with_auto/: main.cpp
test/056_failing_test_with_auto/: main.cpp
test/057_failing_test_with_auto/: main.cpp
test/058_failing_test_with_auto/: main.cpp
test/059_failing_test_with_auto/: main.cpp
test/060_failing_test_with_auto/: main.cpp
test/061_failing_test_with_auto/: main.cpp
test/062_failing_test_with_auto/: main.cpp
test/063_failing_test_with_auto/: main.cpp
test/064_multiple_tests/: main.cpp
test/065_assertion_messages/: main.cpp
test/066_results/: main.cpp
test/067_capturing_lambda_as_test_body/: main.cpp
test/068_mutable_lambda_as_test_body/: main.cpp
test/069_setup/: main.cpp
test/070_teardown/: main.cpp
test/071_incomplete_tests/: main.cpp
test/072_assume/: main.cpp
test/073_disable/: main.cpp
test/074_status/: main.cpp
test/075_env_vars/: main.cpp
test/076_crash/: main.cpp
test/077_crash/: main.cpp
test/078_crash/: main.cpp
test/079_crash/: main.cpp
test/080_crash/: main.cpp
test/081_crash/: main.cpp
test/082_crash/: main.cpp
test/083_crash/: main.cpp
test/084_timeout/: main.cpp
test/085_timeout/: main.cpp
test/086_timeout/: main.cpp
test/087_timeout/: main.cpp
test/088_timeout/: main.cpp
test/089_process_exit_status/: main.cpp
test/090_assert/: main.cpp
test/functional_tests/000_include_only/: main.cpp
test/functional_tests/001_init_only/: main.cpp
test/functional_tests/002_empty_autorun_block_with_init/: main.cpp
test/functional_tests/003_two_empty_autoruns_with_init/: main.cpp
test/functional_tests/004_empty_autorun_block_no_init/: main.cpp
test/functional_tests/005_two_empty_autoruns_no_init/: main.cpp
test/functional_tests/006_one_empty_group/: main.cpp
test/functional_tests/007_two_empty_groups_diff_names/: main.cpp
test/functional_tests/008_two_empty_groups_same_name/: main.cpp
test/functional_tests/009_trivial_test/: main.cpp
test/install_tests/add_subdirectory_test/infrastructure/: CMakeLists.txt  CMakePresets.json
test/install_tests/find_package_exact_version_test/infrastructure/: CMakeLists.txt  CMakePresets.json  tools.cmake
test/test_helpers/: test_helpers.cpp  test_helpers_crash.cpp
(+108 files in other folders)
